<resources>
    <string name="app_name">Self Checkout</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_error">There was an error logging in, please try again.</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="signup_empty_username">Empty Username! Please enter a username. </string>
    <string name="signup_empty_password">Empty Password! Please enter a password. </string>
    <string name="signup_empty_email">Empty Email! Please enter an email. </string>
    <string name="signup_submit">Submit</string>
    <string name="cart_send">Add to Cart</string>
    <string name="cart_not_send">Cancel</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to add item to shopping cart</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="spending_limit_exceeded">\"Spending limit exceeded\"</string>
</resources>
