<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/linearLayout"
        >

        <EditText
            android:id="@+id/username_enter_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:inputType="text"
            />

        <EditText
            android:id="@+id/email_enter_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/password_enter_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            />


        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/signupButton_signup"
            android:text="@string/signup_submit"
            android:onClick="createUser"
            />

    </LinearLayout>


</RelativeLayout>