<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/linearLayout"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp">


        <EditText
            android:id="@+id/username_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:inputType="text"
            />

        <EditText
            android:id="@+id/password_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            />

        <TextView
            android:id="@+id/signupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textSize="15sp"
            android:onClick="sendToSignUp"
            android:layout_margin="5dp"
            android:clickable="true"/>

        <!--TextView
            android:id="@+id/reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textSize="15sp"
            android:onClick="sendToResetPassword"
            android:clickable="true"
            android:layout_margin="5dp"
            /-->

        <Button
            android:id="@+id/submitButton"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/login"
            android:onClick="loginUser"
            />


    </LinearLayout>



</RelativeLayout>

